# SolidEdge-MCP

./: CLAUDE.md  CLAUDE_CODE_SETUP.md  IMPLEMENTATION_STATUS.md  README.md  comprehensive_test.py  diagnose_apis.py  pyproject.toml  test_ellipse.py  test_primitives.py  test_server.py  test_with_solidedge.py
reference/: COMPOSITE_TOOL_PLAN.md  RESOURCE_MIGRATION_PLAN.md  TYPELIB_IMPLEMENTATION_MAP.md
research/: COMMUNITY_API_ANALYSIS.md
scripts/: comprehensive_test.py  create_box_with_hole.py  demo_working_features.py  diagnose_apis.py  diagnostic_script.py  introspect_com_api.py  introspect_everything.py  scrape_typelibs.py  test_server.py  test_with_solidedge.py
src/solidedge_mcp/: managers.py  server.py
tests/integration/: test_tier1_features.py
tests/manual/: test_cutouts_refplanes.py  test_extrude_collection.py  test_extrude_v2.py  test_feature_collections.py  test_mirror_debug.py  test_mirror_e2e.py  test_mirror_fixed.py  test_mirror_threads.py  test_new_tools.py
tests/unit/: test_assembly.py  test_assembly_features.py  test_assembly_placement.py  test_assembly_properties.py  test_assembly_query.py  test_assembly_relations.py  test_assembly_specialized.py  test_assembly_transforms.py  test_connection.py  test_export.py  test_export_annotations.py  test_export_draft.py  test_export_drawing.py  test_export_file.py  test_export_misc.py  test_export_view_model.py  test_export_views.py  test_features.py  test_features_cutout.py  test_features_extrude.py  test_features_holes.py  test_features_loft_sweep.py  test_features_misc.py  test_features_primitives.py  test_features_ref_planes.py  test_features_revolve.py  test_features_rounds_chamfers.py  test_features_sheet_metal.py  test_features_surfaces.py  test_query.py  test_query_brep.py  test_query_document.py  test_sketching.py  (+12 more)
(+72 files in other folders)
