[project]
name = "solidedge-mcp"
version = "0.1.0"
description = "Solid Edge MCP server for AI-assisted CAD design — create, analyze, modify, and export"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "pywin32>=306",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
    "mypy>=1.14",
]

[project.scripts]
solidedge-mcp = "solidedge_mcp.server:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH"]
ignore = ["TC001", "TC002", "TC003"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

# pywin32 / pythoncom have no type stubs
[[tool.mypy.overrides]]
module = [
    "win32com",
    "win32com.*",
    "pythoncom",
    "pywintypes",
]
ignore_missing_imports = true

# Backend mixin modules use cooperative multiple inheritance.
# Mixins access attributes (doc_manager, sketch_manager, etc.) defined on
# the base class; mypy can't resolve these without Protocol refactoring.
[[tool.mypy.overrides]]
module = [
    "solidedge_mcp.backends.features.*",
    "solidedge_mcp.backends.export.*",
    "solidedge_mcp.backends.assembly.*",
    "solidedge_mcp.backends.query.*",
]
disable_error_code = ["attr-defined", "no-any-return"]

# FastMCP decorators (@mcp.tool(), @mcp.resource()) lack type information
[[tool.mypy.overrides]]
module = [
    "solidedge_mcp.tools.*",
]
disable_error_code = ["untyped-decorator"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
